syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";


option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message RenewAccessTokenRequest {
  string refresh_token = 1;
}

message RenewAccessTokenResponse {
  string access_token = 1;
  google.protobuf.Timestamp access_token_expiration = 2;
}